Added crypto.js script.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script src="scripts/external/jquery.cycle.js"></script>
 	<script src="scripts/cardlist.js"></script>
 	<script src="scripts/flashcards.js"></script>
+	<script src="scripts/crypto.js"></script>
 	<script src="scripts/handlebar-helpers.js"></script>
 	<script src="listeners.js"></script>
 	<script>window.jQuery || document.write('<script src="scripts/external/jquery-1.7.2.min.js"><\/script>')</script>
