--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<script src="scripts/flashcards.js"></script>
 	<script src="scripts/crypto.js"></script>
 	<script src="scripts/handlebar-helpers.js"></script>
+	<script src="scripts/drop.js"></script>
 	<script src="listeners.js"></script>
 	<script>window.jQuery || document.write('<script src="scripts/external/jquery-1.7.2.min.js"><\/script>')</script>
 </head>
@@ -30,6 +31,7 @@
 	<div style="margin-top:100px;" class="deck"></div>
 
 	<div id="categories"></div>
+	<div id="dropZone"></div>
 
 </body>
 </html>
